2006-05-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-ppdfile.in: Let PPD file generation with cups-driverd
	  also work if the driver name contains dashes (as in Gutenprint),
	  added "use strict;", let debug output and error messages have
	  prefixes to be correctly categorized in the CUPS error_log.

2006-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Added support for reading additional items
	  from the /etc/cups/printers.conf file: Print quotas, individual,
	  printer sharing, error and operation policies.

2006-04-21  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated some warnings

	* foomatic-configure.in: Added new URIs to URI overview in
	  header comments, let beh wrapper backend also not be
	  applied to HPLIP fax queues (URI: "hpfax:/...").

2006-04-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-ppdfile.in, lib/Foomatic/DB.pm, configure.ac,
	  Makefile.in, makeDefaults.in, USAGE, README: Added support for
	  on-the-fly PPD file generation by the CUPS 1.2 cups-driverd.

	* USAGE: Update HPOJ -> HPLIP.

2006-02-28  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Treat a missing /etc/cups/printers.conf
	  as an empty file (CUPS 1.2 allows printers.conf missing for no
	  local printers). Suppress warnings if the list of available CUPS
	  queues is requested but no default printer set.

2006-01-17  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Generate PPD files correctly where an
	  enumerated-choice option has "0" as default (thanks to Tim
	  Waugh from Red Hat for the patch).

	* foomatic-cleanupdrivers.in: Do not try to delete the "." file in
	  the driver-XML-file directory (thanks to Tim Waugh from Red Hat
	  for the patch).

2006-01-09  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Let PPD files with "*CloseGroup" without
	  group name being parsed correctly, eliminate warning about